<resources>
    <string name="app_name">Hello</string>
    <string name="table_layout_name">TableLayout Activity</string>
    <string name="drag_view_name">DragView Activity</string>
    <string name="butter_knife_name">ButterKnife Activity</string>
    <string name="receiver_learn_name">Receiver Learn Activity</string>
    <string name="get_time_name">Get Time Activity</string>
    <string name="home_key_name">Home Key Activity</string>
    <string name="network_state_name">NetWork State Activity</string>
    <string name="system_properties_name">System Properties Activity</string>
    <string name="app_activity_name">App Activity</string>
    <string name="one_app_activity_name">One App Activity</string>
    <string name="strict_mode_name">StrictMode Activity</string>
    <string name="web_view_name">WebView Activity</string>
    <string name="intent_activity_name">Intent Activity</string>
    <string name="tab_layout_name">TabLayout Activity</string>
    <string name="tab_layout_main_name">TabLayoutMain Activity</string>
    <string name="tab_layout_fragment_name">TabLayoutFragment Activity</string>
    <string name="get_dimension_name">GetDimension Activity</string>
    <string name="runtime_permission_name">RuntimePermission Activity</string>
    <string name="easy_permissions_name">EasyPermissions Activity</string>
    <string name="ftp_upload_name">Ftp Upload Activity</string>
    <string name="gyroscope_name">Gyroscope Sensor</string>
    <string name="picture_name">Show Picture</string>
    <string name="test_name">Test Activity</string>
    <string name="recycler_view_name">RecyclerView Activity</string>
    <string name="easy_recycler_view_name">Easy RecyclerView Activity</string>
    <string name="search_user_name">Search User Activity</string>
    <string name="environment_name">Environment Activity</string>
    <string name="assets_name">Assets Activity</string>
    <string name="http_name">Http Activity</string>
    <string name="dialog_fragment_name">DialogFragment Activity</string>
    <string name="date_picker_name">DatePicker Activity</string>

    <string name="start_async_task">Start new AsyncTask</string>
    <string name="helper_text">Start the async task, <b>rotate the screen</b> and wait for a bit. do adb logcat | grep StrictMode
  </string>
    <string name="leak_canary_display_activity_label">Leaks Sample</string>

    <string name="intent_url">Intent URL</string>

    <!-- take photo -->
    <string name="string_take_photo">Take Photo</string>
    <string name="string_call_phone">Call Phone</string>
    <string name="string_scan_code">Scan Code</string>

    <string name="rationale_camera">This app needs access to your camera so you can take pictures.</string>
    <string name="rationale_call_phone">This app needs use call phone to call someone.</string>


    <!-- ftp upload start -->
    <string name="ftp_upload">FTP Upload</string>
    <string name="uploading">Uploaded [[UPLOADED_FILES]] of [[TOTAL_FILES]] at [[UPLOAD_RATE]] - [[PROGRESS]]</string>
    <string name="upload_success">Upload completed successfully in [[ELAPSED_TIME]]</string>
    <string name="upload_error">Error while uploading</string>
    <string name="upload_cancelled">Upload has been cancelled</string>
    <!-- ftp upload end -->

    <!-- picture start -->
    <string name="choose_picture">Choose Picture</string>
    <!-- picture end -->

    <!-- test start -->
    <string name="upload_percent_format">upload%d%%</string>

    <!-- test end -->

    <string name="load">load</string>

    <!-- loading empty start -->
    <string name="loading_empty_text">no data</string>
    <!-- loading empty end -->

    <!-- http start -->
    <string name="okhttp">okhttp</string>
    <string name="volley">volley</string>
    <string name="network_failed">Network Failed</string>
    <!-- http end -->

    <!-- DialogFragment start -->
    <string name="dialog_positive_text">Ok</string>
    <string name="dialog_negative_text">Cancel</string>
    <!-- DialogFragment end -->

</resources>
