<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadingEdge="vertical"
    android:scrollbars="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hello.MainActivity">

    <LinearLayout
        android:id="@+id/ll_activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.hello.MainActivity">

        <Button
            android:id="@+id/btn_table_layout"
            style="@style/ButtonStyle"
            android:text="@string/table_layout_name" />

        <Button
            android:id="@+id/btn_drag_view"
            style="@style/ButtonStyle"
            android:text="@string/drag_view_name" />

        <Button
            android:id="@+id/btn_butter_knife"
            style="@style/ButtonStyle"
            android:text="@string/butter_knife_name" />

        <Button
            android:id="@+id/btn_receiver_learn"
            style="@style/ButtonStyle"
            android:text="@string/receiver_learn_name" />

        <Button
            android:id="@+id/btn_get_time"
            style="@style/ButtonStyle"
            android:text="@string/get_time_name" />

        <Button
            android:id="@+id/btn_home_key"
            style="@style/ButtonStyle"
            android:text="@string/home_key_name" />

        <Button
            android:id="@+id/btn_network_state"
            style="@style/ButtonStyle"
            android:text="@string/network_state_name" />

        <Button
            android:id="@+id/btn_system_properties"
            style="@style/ButtonStyle"
            android:text="@string/system_properties_name" />

        <Button
            android:id="@+id/btn_app"
            style="@style/ButtonStyle"
            android:text="@string/app_activity_name" />

        <Button
            android:id="@+id/btn_strict_mode"
            style="@style/ButtonStyle"
            android:text="@string/strict_mode_name" />

        <Button
            android:id="@+id/btn_web_view"
            style="@style/ButtonStyle"
            android:text="@string/web_view_name" />

        <Button
            android:id="@+id/btn_intent"
            style="@style/ButtonStyle"
            android:text="@string/intent_activity_name" />

        <Button
            android:id="@+id/btn_tab"
            style="@style/ButtonStyle"
            android:text="@string/tab_layout_name"/>

        <Button
            android:id="@+id/btn_get_dimension"
            style="@style/ButtonStyle"
            android:text="@string/get_dimension_name"/>

        <Button
            android:id="@+id/btn_runtime_permission"
            style="@style/ButtonStyle"
            android:text="@string/runtime_permission_name"/>

        <Button
            android:id="@+id/btn_easy_permissions"
            style="@style/ButtonStyle"
            android:text="@string/easy_permissions_name"/>

        <Button
            android:id="@+id/btn_ftp_upload"
            style="@style/ButtonStyle"
            android:text="@string/ftp_upload_name"/>
        <Button
            android:id="@+id/btn_gyroscope"
            style="@style/ButtonStyle"
            android:text="@string/gyroscope_name"/>

        <Button
            android:id="@+id/btn_telephony"
            style="@style/ButtonStyle"
            android:text="@string/telephony_info_name"/>

        <Button
            android:id="@+id/btn_picture"
            style="@style/ButtonStyle"
            android:text="@string/picture_name"/>

        <Button
            android:id="@+id/btn_test"
            style="@style/ButtonStyle"
            android:text="@string/test_name"/>


    </LinearLayout>
</ScrollView>