<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hello.activity.RuntimePermissionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_take_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_take_photo"/>

        <Button
            android:id="@+id/btn_call_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_call_phone"/>

        <Button
            android:id="@+id/btn_scan_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_scan_code"/>

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
